--- a/website/templates/stfrancisxavier.html
+++ b/website/templates/stfrancisxavier.html
@@ -2,47 +2,6 @@
 
 {% block css %}
   <style>
-    /* BASIC SETUP */
-    *,
-    *::before,
-    *::after {
-      box-sizing: border-box;
-      font-family: "Poppins", arial, helvetica, sans-serif;
-    }
-
-    body {
-      user-select: none;
-      background: #b0e0e6;
-    }
-
-    html,
-    body {
-      max-width: 100%;
-      overflow-x: hidden;
-    }
-
-    a {
-      text-decoration: none;
-    }
-
-    /* SCROLLBAR CODE TAKEN FROM W3SCHOOLS */
-    ::-webkit-scrollbar {
-      width: 10px;
-    }
-
-    ::-webkit-scrollbar-track {
-      background: #f1f1f1;
-    }
-
-    ::-webkit-scrollbar-thumb {
-      background: #888;
-    }
-
-    ::-webkit-scrollbar-thumb:hover {
-      background: #555;
-    }
-
-    /* CONTAINER STYLING */
     .container {
       display: block;
       margin-left: auto;
@@ -51,143 +10,11 @@
       height: 2500px;
       background: #ccc;
     }
-
-    .img {
-      width: 1200px;
-    }
-
-    /* HEADER STYLING */
-    .header {
-      width: 1200px;
-      height: 250px;
-      background: #892626;
-      color: white;
-    }
-
-    .header h1 {
-      font-family: "Dancing Script", cursive;
-      font-size: 60px;
-      padding-top: 10px;
-    }
-
-    .header p {
-      font-size: 19px;
-    }
-
-    .quote-sayer {
-      text-align: right;
-      padding-right: 10px;
-    }
-
-    /* TEXT DIV STYLING */
-
-    .text {
-      margin-left: 30px;
-    }
-
-    .text p {
-      font-size: 17px;
-    }
-
-    /* TEXT AND IMAGES CONTAINER STYLING */
-    .content {
-      width: 1200px;
-      height: 2150px;
-    }
-
-    /* STYLING FOR LINKS AT BOTTOM OF PAGE */
-    .bottom-links {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      flex-direction: column;
-    }
-
-    .btn h2 {
-      font-size: 20px;
-    }
-
-    .btn {
-      margin-top: 30px;
-      padding: 1rem 0;
-      width: 250px;
-      height: 100px;
-      text-align: center;
-      border: 0.1rem solid #56a5eb;
-      margin-bottom: 1rem;
-      text-decoration: none;
-      color: #56a5eb;
-      background-color: white;
-    }
-
-    .btn:hover {
-      cursor: pointer;
-      box-shadow: 0 0.4rem 1.4rem 0 rgba(86, 185, 235, 0.5);
-      transform: translateY(-0.1rem);
-      transition: transform 150ms;
-    }
-
-    .btn:hover {
-      cursor: pointer;
-      box-shadow: 0 0.4rem 1.4rem 0 rgba(86, 185, 235, 0.5);
-      transform: translateY(-0.1rem);
-      transition: transform 150ms;
-    }
-
-    .prev-next {
-      width: 100%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-
-    /* RESPONSIVENESS FOR MOBILE DEVICES */
-    @media (max-width: 500px) {
-      .header h1 {
-        font-size: 40px;
-      }
-
-      .header p {
-        font-size: 10px !important;
-      }
-
-      .text h2 {
-        font-size: 20px;
-      }
-
-      .text p {
-        font-size: 6.8px !important;
-      }
-
-      .img {
-        display: none;
-      }
-    }
-
-    /* RESPONSIVENESS FOR TABLETS AND IPADS */
-    @media (max-width: 950px) {
-      .container {
-        width: 768px;
-        height: 2400px;
-      }
-
-      .header {
-        width: 755px;
-      }
-
-      .img {
-        width: 750px;
-      }
-
-      .text p {
-        font-size: 12px;
-      }
-    }
   </style>
 {% endblock %}
 
 {% block title %}St. Francis Xavier{% endblock %}
-  
+
 {% block content %}
   <div class="container">
     <div class="header">
@@ -211,88 +38,86 @@
       </div>
       <div class="text">
         <p>
-          St. Francis Xavier (7 April 1506-3 December 1552) was a Spanish
-          Catholic priest, missionary <br />and saint from Navarre; he was the
-          co-founder of the Society of Jesus. Born in Javier, Kingdom of
-          <br />Navarre, he was a companion of Ignatius of Loyola and one of
-          the first seven Jesuits who took vows <br />of poverty and chastity
-          at Montmartre, Paris, in 1534. He led an extensive mission into
-          Asia, mainly <br />in the Portuguese Empire of the time, and was
-          influential in evangalization work, most notably in India. <br />He
-          was beatified by Pope Paul V on 25 October 1619 and canonized by
-          Pope Gregory XV on 12 March 1622.
+          St. Francis Xavier (7 April 1506-3 December 1552) was a Spanish Catholic
+          priest, missionary <br />and saint from Navarre; he was the co-founder
+          of the Society of Jesus. Born in Javier, Kingdom of <br />Navarre, he
+          was a companion of Ignatius of Loyola and one of the first seven Jesuits
+          who took vows <br />of poverty and chastity at Montmartre, Paris, in
+          1534. He led an extensive mission into Asia, mainly <br />in the
+          Portuguese Empire of the time, and was influential in evangalization
+          work, most notably in India. <br />He was beatified by Pope Paul V on 25
+          October 1619 and canonized by Pope Gregory XV on 12 March 1622.
         </p>
         <h2>Early Life</h2>
         <p>
-          Francis Xavier was born in the royal castle of Xavier, in the
-          Kingdom of Navarre, on 7 April 1506
-          <br />according to a family register. He was the youngest son of
-          Juan de Jasso y Atondo, seneschal of <br />Xavier castle, who
-          belonged to a prosperous farming family and had acquired a doctorate
-          in law at <br />the University of Bologna. Basque was his mother
-          tongue. Juan later became a privy counsellor <br />and finance
-          minister to King John III of Navarre (Jean d'Albret). Francis's
-          mother was Dona <br />Maria de Azpilcueta y Aznarez, sole heiress of
-          two noble Navarrese families. He was through her <br />related to
-          the great theologian and philosopher Martin de Azpilcueta. In 1512,
-          Ferdinand, King of <br />Aragon and regent of Castile, invaded
-          Navarre, initiating a war that lasted over 18 years. Three
-          <br />years later, Francis's father died when Francis was only nine
-          years old. In 1516, Francis's brothers <br />participated in a
-          failed Navarrese-French attempt to expel the Spanish invaders from
-          the kingdom.
+          Francis Xavier was born in the royal castle of Xavier, in the Kingdom of
+          Navarre, on 7 April 1506
+          <br />according to a family register. He was the youngest son of Juan de
+          Jasso y Atondo, seneschal of <br />Xavier castle, who belonged to a
+          prosperous farming family and had acquired a doctorate in law at
+          <br />the University of Bologna. Basque was his mother tongue. Juan
+          later became a privy counsellor <br />and finance minister to King John
+          III of Navarre (Jean d'Albret). Francis's mother was Dona <br />Maria de
+          Azpilcueta y Aznarez, sole heiress of two noble Navarrese families. He
+          was through her <br />related to the great theologian and philosopher
+          Martin de Azpilcueta. In 1512, Ferdinand, King of <br />Aragon and
+          regent of Castile, invaded Navarre, initiating a war that lasted over 18
+          years. Three <br />years later, Francis's father died when Francis was
+          only nine years old. In 1516, Francis's brothers <br />participated in a
+          failed Navarrese-French attempt to expel the Spanish invaders from the
+          kingdom.
         </p>
         <h2>Missionary work</h2>
         <p>
-          On 15 August 1534, seven students met in a crypt beneath the Church
-          of Saint Denis (now Saint Pierre de
-          <br />Montmartre), on the hill of Montmartre, overlooking Paris.
-          They were Francis, Ignatius of Loyola, Alfonso <br />Salmeron, Diego
-          Lainez, Nicolas Bobadilla from Spain, Peter Faber from Savoy, and
-          Simao Rodrigues from <br />Portugal. They made private vows of
-          poverty, chastity, and obedience to the Pope, and also vowed to go
-          to <br />the Holy Land to convert infidels. Francis began his study
-          of theology in 1534 and was ordained <br />on 24 June 1537. In 1539,
-          after long discussions, Ignatius drew up a formula for a new
-          religious order, <br />the Society of Jesus (the Jesuits).
-          Ignatius's plan for the order was approved by Pope Paul III in 1540.
+          On 15 August 1534, seven students met in a crypt beneath the Church of
+          Saint Denis (now Saint Pierre de
+          <br />Montmartre), on the hill of Montmartre, overlooking Paris. They
+          were Francis, Ignatius of Loyola, Alfonso <br />Salmeron, Diego Lainez,
+          Nicolas Bobadilla from Spain, Peter Faber from Savoy, and Simao
+          Rodrigues from <br />Portugal. They made private vows of poverty,
+          chastity, and obedience to the Pope, and also vowed to go to <br />the
+          Holy Land to convert infidels. Francis began his study of theology in
+          1534 and was ordained <br />on 24 June 1537. In 1539, after long
+          discussions, Ignatius drew up a formula for a new religious order,
+          <br />the Society of Jesus (the Jesuits). Ignatius's plan for the order
+          was approved by Pope Paul III in 1540.
         </p>
         <h2>Burials and Relics</h2>
         <p>
           Xavier was first buried on a beach at Shangchuan Island, Taishan,
           Guangdong. His body was taken from the
           <br />
-          island in February 1553 and temporarily buried in St. Paul's Church
-          in Portuguese Malacca on 22 March 1553. <br />
+          island in February 1553 and temporarily buried in St. Paul's Church in
+          Portuguese Malacca on 22 March 1553. <br />
           An open grave in the church now marks the place of Xavier's burial.
           Pereira came back from Goa, removed the <br />
           corpse shortly after 15 April 1553, and moved it to his house. On 11
           December 1553, Xavier's body was shipped <br />
-          to Goa. The body is now in the Basilica of Bom Jesus in Goa, where
-          it was placed in a glass container encased <br />
-          in a silver casket on 2 December 1637. This casket, constructed by
-          Goan silversmiths between 1636 and 1637, <br />
-          was an exemplary blend of Italian and Indian aesthetic
-          sensibilities. There are 32 silver plates on all four sides <br />
+          to Goa. The body is now in the Basilica of Bom Jesus in Goa, where it
+          was placed in a glass container encased <br />
+          in a silver casket on 2 December 1637. This casket, constructed by Goan
+          silversmiths between 1636 and 1637, <br />
+          was an exemplary blend of Italian and Indian aesthetic sensibilities.
+          There are 32 silver plates on all four sides <br />
           of the casket, depicting different episodes from the life of Xavier.
         </p>
         <h2>Veneration</h2>
         <p>
           Francis Xavier was beatified by Paul V on 25 October 1619, and was
           canonized by Gregory XV on 12 March
-          <br />1622, at the same time as Ignatius Loyola. Pius XI proclaimed
-          him the "Patron of Catholic Missions". <br />His feast day is 3
-          December. Saint Francis Xavier's relics are kept in a silver casket,
-          elevated inside <br />the Bom Jesus Basilica and are exposed (being
-          brought to ground level) generally every ten years, but <br />this
-          is discretionary. The sacred relics went on display starting on 22
-          November 2014 at the XVII Solemn <br />Exposition. The display
-          closed on 4 January 2015. The previous exposition, the sixteenth,
-          was held from <br />21 November 2004 to 2 January 2005. Relics of
-          Saint Francis Xavier are also found in the Espirito Santo
-          <br />(Holy Spirit) Church, Margao, in Sanv Fransiku Xavierachi
-          Igorz (Church of St. Francis Xavier), Batpal, <br />Canacona, Goa,
-          and at St. Francis Xavier Chapel, Portais, Panjim.
+          <br />1622, at the same time as Ignatius Loyola. Pius XI proclaimed him
+          the "Patron of Catholic Missions". <br />His feast day is 3 December.
+          Saint Francis Xavier's relics are kept in a silver casket, elevated
+          inside <br />the Bom Jesus Basilica and are exposed (being brought to
+          ground level) generally every ten years, but <br />this is
+          discretionary. The sacred relics went on display starting on 22 November
+          2014 at the XVII Solemn <br />Exposition. The display closed on 4
+          January 2015. The previous exposition, the sixteenth, was held from
+          <br />21 November 2004 to 2 January 2005. Relics of Saint Francis Xavier
+          are also found in the Espirito Santo <br />(Holy Spirit) Church, Margao,
+          in Sanv Fransiku Xavierachi Igorz (Church of St. Francis Xavier),
+          Batpal, <br />Canacona, Goa, and at St. Francis Xavier Chapel, Portais,
+          Panjim.
         </p>
       </div>
     </div>
